Fixed overflow settings of Blog home, and made other small changes

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -26,7 +26,7 @@
   --text: var(--mt-dark);
   --text-offset: var(--mt-dark-offset);
 
-  --focused: var(--cd-turqoise);
+  --focused: var(--cd-lilac);
 }
 
 :root[data-theme='dark'] {
